overflow-x fix

--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -54,6 +54,7 @@ body{
     padding: 0%;
     width: 1400px;
     height: 3718px;
+    overflow-x: hidden;
 }
 
 div.header{
